2007-03-08 Maximilien Cuony
	* Solved the <br>\n<br> bug in cselect
	* Begging of gmail's butons implementation (DON'T USE IT)
	* Resolve &lt; problem
	* Gmail suppot finish !

2007-03-08  Achraf cherti
	* GPG.selfTest() is now not called from overlay, but from cgpg.js
	  in the member functions (decrypt, crypt, verify, sign).
	* the website (in comment) is only showed if it's activated in 
	  options.xul.
	* the indentation is fixed in gmail.js and gpg*js.
	* Some things in french/english locale are fixed.

2007-03-08 Maximilien Cuony
	* Interface for Gmail !
	* Option use Gmail is used
	* Add a 'Need restart' for string of Gmail use's option
	* Cgmail try now to check autenticity of mails.
	* New function in Cselct : wash, for get usable strings form HTML sources
	* Add decrypt system for Cgmail

2007-03-07  Achraf cherti
	* it's possible in options.xul to select the gpg path (with the file picker).
	* gpg-path textbox and button is enabled/disabled when the checkbox is checked/unchecked.
	* check box "always sign or verify in a new window" is added.

2007-03-07 Maximilien Cuony
	* Compatibility with FF 1.5
	* Full support of Windows (with 3 hors of work !)

2007-03-06 Maximilien Cuony
	* Implement a test for detect presence of GPG
	* selectPublicKey implemented in cgpg
	* Import system implemented
	* Add a detection of blanks selections
	* Add a system for detection of valid PGP'blocks
	* Compatibility with Iframes !!!
	* Compatibility with gmail !!!
	* Support for scripts and stranges <br>[\n] in source code of selections !

2007-03-06  Achraf cherti
	* list dialog (list.xul, list.js, list*dtd) implemented.
	* selectPublicKey() implemented (it show a dialog with all keys).
	* two optional arguments are added to showText() : description
	  and title.
	* the default values of gpg_path, specify_gpg_path and show_website are
	  added in defaults/preferences/firegpg.js.

2007-03-05  Maximilien Cuony
	* Fix an error in getPrivateKeyPassword()