@@ -17,7 +17,7 @@ importOk=Importation réussie.
 noData=Votre sélection est vide. Veuillez sélectionner un texte.
 noPass=Entrez un mot de passe.
 noKey=Sélectionnez une clé.
-noGPGData=Désolé, mais votre sélection ne contiens aucune donnée GPG valide ! (Pour cette opération)
+noGPGData=Désolé, mais votre sélection ne contient aucune donnée GPG valide.
 fileSelectorSelectFile=Sélectionnez un fichier
 GMailS=Signer
 GMailSS=Signer et envoyer
